aggiunta frontend e sistema di reset di password (da integrare ancora), bisogna poi inviare la mail col link e impostarlo nelle route di react, ma anche validare i form backend e frontend

--- a/Auth-Server/static/login/src/css/index.scss
+++ b/Auth-Server/static/login/src/css/index.scss
@@ -29,3 +29,12 @@
     max-width: 400px;
     min-width: min-content;
   }
+
+  main{
+    display: flex;
+    flex-direction: column;
+      form{
+        display: flex;
+        flex-direction: column;
+      }
+  }
