--- a/Auth-Server/static/login/src/css/index.css
+++ b/Auth-Server/static/login/src/css/index.css
@@ -33,10 +33,14 @@
 main {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 main form {
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 
 /*# sourceMappingURL=index.css.map */
