--- a/Auth-Server/static/login/src/css/index.scss
+++ b/Auth-Server/static/login/src/css/index.scss
@@ -33,8 +33,12 @@
   main{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
       form{
         display: flex;
         flex-direction: column;
+        width: 50%;
       }
   }
